data loading in csv of heart data

--- a/DWM_project.ipynb
+++ b/DWM_project.ipynb
@@ -553,7 +553,9 @@
    "cell_type": "code",
    "execution_count": 70,
    "id": "31bc8550",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1655,7 +1657,7 @@
     "# here we have 2 col having null value ie ca and thal\n",
     "# perform OneHotEncoding for both col\n",
     "\n",
-    "data['ca'].replace(to_replace=np.nan,value=int(data['ca'].mean()) ,inplace=True)\n",
+    "data['ca'].replace(to_replace=np.nan,value=int(data['cean(a'].m)) ,inplace=True)\n",
     "data['thal'].replace(to_replace=np.nan,value=int(data['thal'].mean()) ,inplace=True)\n"
    ]
   },
